@@ -1,3 +1,7 @@
+  05 Feb 2020; Agostino Sarubbo <ago@gentoo.org> -queuemetrics-19.10.5.ebuild,
+  -queuemetrics-19.10.6.ebuild:
+  app-metrics/queuemetrics: remove old
+
 *queuemetrics-19.10.8 (05 Feb 2020)
 
   05 Feb 2020; Agostino Sarubbo <ago@gentoo.org> +queuemetrics-19.10.8.ebuild:
